--- a/FameSmartApp/Base.lproj/Main.storyboard
+++ b/FameSmartApp/Base.lproj/Main.storyboard
@@ -1865,11 +1865,11 @@
                                     <constraint firstAttribute="trailing" secondItem="eqA-Mj-FJt" secondAttribute="trailing" id="fYe-V0-yQT"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FiP-Ev-nPY">
-                                <rect key="frame" x="12" y="141" width="576" height="429"/>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FiP-Ev-nPY">
+                                <rect key="frame" x="12" y="155" width="576" height="415"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vku-4z-YaK">
-                                        <rect key="frame" x="0.0" y="96" width="279" height="86"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vku-4z-YaK">
+                                        <rect key="frame" x="0.0" y="93" width="279" height="84"/>
                                         <state key="normal" backgroundImage="main_video_normal.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -1878,8 +1878,8 @@
                                             <segue destination="WJ0-25-BsR" kind="show" id="JqY-JG-CMN"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oZ9-qP-1Ol">
-                                        <rect key="frame" x="297" y="0.0" width="279" height="182"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oZ9-qP-1Ol">
+                                        <rect key="frame" x="297" y="0.0" width="279" height="177"/>
                                         <state key="normal" backgroundImage="main_application_normal.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -1888,8 +1888,8 @@
                                             <segue destination="jct-i8-0jw" kind="show" id="WPd-XZ-sCs"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yeo-65-BiB">
-                                        <rect key="frame" x="0.0" y="192" width="181" height="86"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yeo-65-BiB">
+                                        <rect key="frame" x="0.0" y="187" width="181" height="83"/>
                                         <state key="normal" backgroundImage="main_update_normal.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -1898,8 +1898,8 @@
                                             <segue destination="KVD-Wt-lj9" kind="show" id="pUb-qu-qIM"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H8R-KG-7I1">
-                                        <rect key="frame" x="0.0" y="288" width="181" height="86"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H8R-KG-7I1">
+                                        <rect key="frame" x="0.0" y="280" width="181" height="83"/>
                                         <state key="normal" backgroundImage="main_manual_normal.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -1908,8 +1908,8 @@
                                             <segue destination="sjL-x2-zHP" kind="show" id="Pmz-Qy-Ydh"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oDS-xa-fIW">
-                                        <rect key="frame" x="197" y="288" width="182" height="86"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oDS-xa-fIW">
+                                        <rect key="frame" x="197" y="280" width="182" height="83"/>
                                         <state key="normal" backgroundImage="main_about_normal.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -1918,8 +1918,8 @@
                                             <segue destination="pdU-37-LUi" kind="show" id="fCt-SZ-Vdn"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4hj-me-Xxr">
-                                        <rect key="frame" x="395" y="288" width="181" height="86"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4hj-me-Xxr">
+                                        <rect key="frame" x="395" y="280" width="181" height="83"/>
                                         <state key="normal" backgroundImage="main_setting_normal.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -1936,8 +1936,8 @@
                                             <segue destination="yh1-6v-sML" kind="show" id="Hl1-ih-qcu"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jCq-5F-N7q" userLabel="Button">
-                                        <rect key="frame" x="198" y="192" width="378" height="86"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jCq-5F-N7q" userLabel="Button">
+                                        <rect key="frame" x="198" y="187" width="378" height="83"/>
                                         <state key="normal" backgroundImage="main_sensor_normal.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -6170,10 +6170,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
                             <view tag="10" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1dD-D5-Z1R">
-                                <rect key="frame" x="30" y="20" width="540" height="580"/>
+                                <rect key="frame" x="30" y="20" width="570" height="580"/>
                                 <subviews>
                                     <button hidden="YES" opaque="NO" tag="8" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gwv-Fa-B0P">
-                                        <rect key="frame" x="245" y="480" width="50" height="50"/>
+                                        <rect key="frame" x="260" y="480" width="50" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="4MP-GX-ryo"/>
                                             <constraint firstAttribute="width" constant="50" id="6s1-23-0bY"/>
@@ -6183,7 +6183,7 @@
                                         </state>
                                     </button>
                                     <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="9" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EDIT" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QF7-D7-ctL">
-                                        <rect key="frame" x="255" y="543" width="31" height="17"/>
+                                        <rect key="frame" x="270" y="543" width="31" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -6204,7 +6204,7 @@
                             <constraint firstItem="cke-Tv-x1z" firstAttribute="top" secondItem="TWX-YR-2jL" secondAttribute="top" id="4NY-2r-9GV"/>
                             <constraint firstItem="aux-XZ-7mx" firstAttribute="top" secondItem="1dD-D5-Z1R" secondAttribute="bottom" id="9Wt-W6-Uaf"/>
                             <constraint firstItem="cke-Tv-x1z" firstAttribute="leading" secondItem="TWX-YR-2jL" secondAttribute="leading" id="FpJ-Jb-2TM"/>
-                            <constraint firstAttribute="trailing" secondItem="1dD-D5-Z1R" secondAttribute="trailing" constant="30" id="mkd-9N-lob"/>
+                            <constraint firstAttribute="trailing" secondItem="1dD-D5-Z1R" secondAttribute="trailing" id="mkd-9N-lob"/>
                             <constraint firstItem="aux-XZ-7mx" firstAttribute="top" secondItem="cke-Tv-x1z" secondAttribute="bottom" id="ngb-Ta-omw"/>
                             <constraint firstItem="1dD-D5-Z1R" firstAttribute="top" secondItem="7jv-Tp-MGW" secondAttribute="bottom" id="oFH-VD-qJX"/>
                         </constraints>
