--- a/FameSmartApp/Base.lproj/Main.storyboard
+++ b/FameSmartApp/Base.lproj/Main.storyboard
@@ -2463,11 +2463,11 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JJ3-La-93f">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JJ3-La-93f">
                                 <rect key="frame" x="142" y="241" width="316" height="60"/>
                                 <subviews>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="未获取" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OJF-j4-rdW">
-                                        <rect key="frame" x="98" y="6" width="120" height="48"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="未获取" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OJF-j4-rdW">
+                                        <rect key="frame" x="98" y="6" width="134" height="54"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="48" id="M3d-4q-GPt"/>
                                         </constraints>
@@ -2475,7 +2475,7 @@
                                         <color key="textColor" red="0.95294123888015747" green="0.80392163991928101" blue="0.16470588743686676" alpha="1" colorSpace="deviceRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="℃" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3iS-cc-4Bx">
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="℃" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3iS-cc-4Bx">
                                         <rect key="frame" x="258" y="0.0" width="38" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -2489,27 +2489,25 @@
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="OJF-j4-rdW" firstAttribute="leading" secondItem="u7x-zj-dvx" secondAttribute="trailing" constant="30" id="6FM-Ha-QN1"/>
                                     <constraint firstItem="3iS-cc-4Bx" firstAttribute="top" secondItem="JJ3-La-93f" secondAttribute="top" id="6nL-go-RcE"/>
                                     <constraint firstAttribute="centerX" secondItem="OJF-j4-rdW" secondAttribute="centerX" id="MOA-pH-L5f"/>
                                     <constraint firstAttribute="bottom" secondItem="u7x-zj-dvx" secondAttribute="bottom" id="MuW-P7-K9W"/>
-                                    <constraint firstItem="3iS-cc-4Bx" firstAttribute="leading" secondItem="OJF-j4-rdW" secondAttribute="trailing" constant="40" id="TlB-aI-2KT"/>
                                     <constraint firstAttribute="trailing" secondItem="3iS-cc-4Bx" secondAttribute="trailing" constant="20" id="Z0L-hn-kmq"/>
                                     <constraint firstItem="u7x-zj-dvx" firstAttribute="leading" secondItem="JJ3-La-93f" secondAttribute="leading" id="fxU-Vj-q0f"/>
                                     <constraint firstAttribute="centerY" secondItem="OJF-j4-rdW" secondAttribute="centerY" id="m1P-oo-mso"/>
                                     <constraint firstAttribute="height" constant="60" id="yxF-8j-KpT"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lHL-ki-2qB">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lHL-ki-2qB">
                                 <rect key="frame" x="142" y="336" width="316" height="60"/>
                                 <subviews>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="未获取" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bd2-1t-iX5">
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="未获取" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bd2-1t-iX5">
                                         <rect key="frame" x="98" y="6" width="120" height="48"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                         <color key="textColor" red="0.95294123890000004" green="0.80392163989999998" blue="0.1647058874" alpha="1" colorSpace="deviceRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="℃" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZkM-lA-dkf">
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="℃" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZkM-lA-dkf">
                                         <rect key="frame" x="258" y="0.0" width="20" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -2524,20 +2522,19 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="ZkM-lA-dkf" firstAttribute="top" secondItem="lHL-ki-2qB" secondAttribute="top" id="0t5-1D-fAc"/>
+                                    <constraint firstAttribute="trailing" secondItem="ZkM-lA-dkf" secondAttribute="trailing" constant="20" id="89x-ck-ReA"/>
                                     <constraint firstItem="6as-ji-txh" firstAttribute="leading" secondItem="lHL-ki-2qB" secondAttribute="leading" id="VoY-N6-yp1"/>
                                     <constraint firstAttribute="bottom" secondItem="6as-ji-txh" secondAttribute="bottom" id="cvs-tl-amV"/>
                                     <constraint firstAttribute="centerY" secondItem="bd2-1t-iX5" secondAttribute="centerY" id="gwG-HH-7Ew"/>
                                     <constraint firstAttribute="centerX" secondItem="bd2-1t-iX5" secondAttribute="centerX" id="ihb-xd-fLb"/>
                                     <constraint firstAttribute="height" constant="60" id="o8a-OV-xfN"/>
-                                    <constraint firstItem="ZkM-lA-dkf" firstAttribute="leading" secondItem="bd2-1t-iX5" secondAttribute="trailing" constant="40" id="oAD-RG-iwZ"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="JJ3-La-93f" secondAttribute="centerX" id="2Gp-bN-QLn"/>
                             <constraint firstItem="5Cp-vM-Qx6" firstAttribute="height" secondItem="fEQ-h6-GYs" secondAttribute="height" multiplier="0.2" id="9je-vP-voe"/>
-                            <constraint firstItem="JJ3-La-93f" firstAttribute="width" secondItem="lHL-ki-2qB" secondAttribute="width" id="Cgx-DK-aWf"/>
+                            <constraint firstItem="lHL-ki-2qB" firstAttribute="width" secondItem="JJ3-La-93f" secondAttribute="width" id="NTM-Wc-LSW"/>
                             <constraint firstItem="JJ3-La-93f" firstAttribute="top" secondItem="v1g-OI-VmT" secondAttribute="bottom" constant="40" id="QFR-pt-Tbi"/>
                             <constraint firstItem="fEQ-h6-GYs" firstAttribute="top" secondItem="Me8-Sf-U3I" secondAttribute="top" id="SG8-fK-Rpo"/>
                             <constraint firstItem="lHL-ki-2qB" firstAttribute="top" secondItem="JJ3-La-93f" secondAttribute="bottom" constant="35" id="Twd-bD-cOz"/>
@@ -2547,8 +2544,10 @@
                             <constraint firstAttribute="centerX" secondItem="v1g-OI-VmT" secondAttribute="centerX" id="cgC-ym-4ca"/>
                             <constraint firstAttribute="trailing" secondItem="fEQ-h6-GYs" secondAttribute="trailing" id="eG7-9E-BQ9"/>
                             <constraint firstAttribute="centerX" secondItem="5Cp-vM-Qx6" secondAttribute="centerX" id="g7w-6b-gun"/>
+                            <constraint firstItem="JJ3-La-93f" firstAttribute="width" secondItem="Me8-Sf-U3I" secondAttribute="width" multiplier="0.7" id="hTD-ZZ-VMw"/>
                             <constraint firstItem="v1g-OI-VmT" firstAttribute="top" secondItem="5Cp-vM-Qx6" secondAttribute="bottom" constant="10" id="jxb-x9-Wmi"/>
                             <constraint firstAttribute="bottom" secondItem="fEQ-h6-GYs" secondAttribute="bottom" id="m9m-5h-G2d"/>
+                            <constraint firstItem="JJ3-La-93f" firstAttribute="centerX" secondItem="Me8-Sf-U3I" secondAttribute="centerX" id="yda-vH-dmK"/>
                         </constraints>
                     </view>
                     <connections>
@@ -7380,15 +7379,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginpanel.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="miv-zy-ffR">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="miv-zy-ffR" secondAttribute="bottom" id="M2H-Pc-5bS"/>
                             <constraint firstItem="miv-zy-ffR" firstAttribute="leading" secondItem="wvA-R9-I6j" secondAttribute="leading" id="XMu-XQ-Chy"/>
-                            <constraint firstItem="miv-zy-ffR" firstAttribute="top" secondItem="w3I-i2-8Vy" secondAttribute="bottom" id="cWJ-N7-1KU"/>
                             <constraint firstAttribute="trailing" secondItem="miv-zy-ffR" secondAttribute="trailing" id="vNQ-OP-uEG"/>
+                            <constraint firstItem="miv-zy-ffR" firstAttribute="top" secondItem="wvA-R9-I6j" secondAttribute="top" constant="20" id="wPW-3F-XBV"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Jp3-bU-Chf"/>
@@ -7409,15 +7408,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginpanel.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="RLO-d6-6MU">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="loginpanel.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="RLO-d6-6MU">
+                                <rect key="frame" x="0.0" y="26" width="600" height="574"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="RLO-d6-6MU" secondAttribute="bottom" id="44J-KS-Clc"/>
+                            <constraint firstItem="RLO-d6-6MU" firstAttribute="top" secondItem="hPd-WF-Rpp" secondAttribute="top" constant="20" id="nKq-gU-thZ"/>
                             <constraint firstAttribute="trailing" secondItem="RLO-d6-6MU" secondAttribute="trailing" id="ogz-7d-os9"/>
-                            <constraint firstItem="RLO-d6-6MU" firstAttribute="top" secondItem="Hrj-BB-UQo" secondAttribute="bottom" id="ton-Na-tuT"/>
                             <constraint firstItem="RLO-d6-6MU" firstAttribute="leading" secondItem="hPd-WF-Rpp" secondAttribute="leading" id="xon-mJ-D3v"/>
                         </constraints>
                     </view>
@@ -7470,12 +7469,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginpanel.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Qgk-YW-XP4">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Qgk-YW-XP4" firstAttribute="top" secondItem="U69-TL-Dqk" secondAttribute="top" id="4Zq-Qk-WMz"/>
+                            <constraint firstItem="Qgk-YW-XP4" firstAttribute="top" secondItem="U69-TL-Dqk" secondAttribute="top" constant="20" id="4Zq-Qk-WMz"/>
                             <constraint firstAttribute="trailing" secondItem="Qgk-YW-XP4" secondAttribute="trailing" id="9mQ-Ma-AWP"/>
                             <constraint firstAttribute="bottom" secondItem="Qgk-YW-XP4" secondAttribute="bottom" id="AIj-KV-cI1"/>
                             <constraint firstItem="Qgk-YW-XP4" firstAttribute="leading" secondItem="U69-TL-Dqk" secondAttribute="leading" id="Y9Y-aU-rpl"/>
